--- a/INHA_super_challenge_Hackathon_COVID19_project/build.gradle
+++ b/INHA_super_challenge_Hackathon_COVID19_project/build.gradle
@@ -30,6 +30,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.testcontainers:junit-jupiter'
+
+	// h2 Database
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
 }
 
 dependencyManagement {
