--- a/INHA_super_challenge_Hackathon_COVID19_project/build.gradle
+++ b/INHA_super_challenge_Hackathon_COVID19_project/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.testcontainers:junit-jupiter'
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+
 
 	// h2 Database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
