--- a/INHA_super_challenge_Hackathon_COVID19_project/src/main/resources/application.properties
+++ b/INHA_super_challenge_Hackathon_COVID19_project/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
